--- a/templates/index.html
+++ b/templates/index.html
@@ -70,7 +70,7 @@
                         <h2>Escolha uma das senhas geradas</h2>
                         <section class="generated-passwd">
                             <label for="passwd_1">{{ FIRST_PASSWD }}</label>
-                            <input type="radio" id="passwd_1" name="passwords" value="{{ FIRST_PASSWD }}">
+                            <input type="radio" id="passwd_1" name="passwords" value="{{ FIRST_PASSWD }}" checked>
                         </section>
                         <section class="generated-passwd">
                             <label for="passwd_2">{{ SECOND_PASSWD }}</label>
